# deepagents

.github/: dependabot.yml
examples/: README.md
examples/memory-backend-agent/: .env.example  .gitignore  AGENTS.md  README.md  agent.py  agent_powermem.py  pyproject.toml  store.py
libs/cli/: CHANGELOG.md  pyproject.toml
libs/deepagents/deepagents/: graph.py
libs/deepagents/deepagents/backends/: __init__.py  composite.py  memory.py  protocol.py
libs/deepagents/tests/unit_tests/: test_subagents.py
libs/deepagents/tests/unit_tests/backends/: test_memory_backend.py
